--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fis3-parser-rosetta",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "FIS parser for rosetta",
   "main": "index.js",
   "scripts": {
@@ -22,9 +22,9 @@
   },
   "homepage": "https://github.com/fex-team/fis3-parser-rosetta",
   "dependencies": {
-    "cheerio": "^0.19.0",
-    "escodegen": "^1.6.1",
-    "esprima-fb": "^15001.1.0-dev-harmony-fb",
-    "jstransform": "^11.0.0"
+    "cheerio": "0.19.0",
+    "escodegen": "1.6.1",
+    "esprima-fb": "15001.1.0-dev-harmony-fb",
+    "jstransform": "11.0.0"
   }
 }
